--- a/Task__5_streamlit_NazneenAKRAM.ipynb
+++ b/Task__5_streamlit_NazneenAKRAM.ipynb
@@ -69,7 +69,7 @@
         "# Load the pre-trained model\n",
         "model = load_model('bitcoin_price_prediction_model.h5')\n",
         "\n",
-        "# Load the Bitcoin dataset (you can replace it with your dataset)\n",
+        "# Load the Bitcoin dataset\n",
         "data = pd.read_csv('BitCoin.csv')\n",
         "\n",
         "# Function to preprocess user input for prediction\n",
